Fix discussion spacing

--- a/src/components/sectionDiscussion/section-discussion.module.css
+++ b/src/components/sectionDiscussion/section-discussion.module.css
@@ -3,25 +3,25 @@
 
 .disc > article {
 	display: grid;
-	gap: 2.5rem;
+	gap: 2.7rem;
 }
 
 .item {
 	display: grid;
-	grid-template-columns: 1fr 7fr 1fr;
+	grid-template-columns: max-content 1fr max-content;
 	gap: 3rem;
 }
 
 .item > svg {
-	width: 100%;
-	height: 100%;
+	width: 7rem;
+	height: 7rem;
 }
 
 .item > div {
 	display: flex;
 	flex-direction: column;
 	align-items: stretch;
-	padding: 1.5rem 0;
+	padding: 0.75rem 0;
 	justify-content: space-between;
 }
 
