--- a/src/styles/pages/_page-discussion.css
+++ b/src/styles/pages/_page-discussion.css
@@ -3,7 +3,7 @@
 
 .page-discussion__header {
 	display: grid;
-	grid-template-columns: 30rem 1fr 30rem;
+	grid-template-columns: 22.5rem 1fr 22.5rem;
 	gap: 5rem;
 	margin: 3rem 0;
 }
@@ -14,6 +14,6 @@
 
 .page-discussion__inner {
 	display: grid;
-	grid-template-columns: 30rem 1fr 30rem;
+	grid-template-columns: 22.5rem 1fr 22.5rem;
 	gap: 5rem;
 }
